# filplus-provider-benchmark

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile-worker-aws  README.md  docker-compose.yml  entrypoint.sh
.github/workflows/: build-docker-image.yml  release-new-version.yml
.sqlx/: query-1374c81ee1ff30cbe17110403ca542f61ef7e41b737402092191a01cf4bfad57.json  query-1f99331804bbd7d076f9d046773012077da556e44fce108f12eb167699135980.json  query-2610952012ffbc8d98239ee3a4fae4fdc38b6c8e789d8e9db4786c996bbe3abd.json  query-324ad980cda4cc7856ceb5fdd95d565471a2e0a52c5ce0c8ed3952c278c61b6d.json  query-5379bb849a8ee623e987505febe0eca6ecf7be56cf15081ef7efc5fdb8e2897e.json  query-53c3c7473a60d621656384c267c8fca9d85b757a0cb4c272008d6a1f9e399ad6.json  query-53d8bb8ea192b275e91d2069a71e24047b9be830ba8a6aefc7d3d23a92b2ae66.json  query-56226b9c3840da59c94bb748bfb7af42e52e6543fad893d7569f2229c2f46d76.json  query-657d1bddcf69643d16d000a8d91961e7b3f4e8e3294ee9e01238ca2452fde618.json  query-73a9065cf317db86831f1525c32328bc9b02536709c4fd8d72d7d47d7613e2cd.json  query-8c925535a7b17a4f82dd38720a53a99295568089b0a30ec62231e9082a213de2.json  query-8fc129daba3cdca1434f85d8cf15fa4473592235dff1396790b359310a60465d.json  query-90db281fd530cb69abb6afbdb944b82d3849fb943aa1a06b5b234ca098f70c94.json  query-993fb0724c946127e758ddf65cf5f14d707cb0454e12f000dd60db0a9fe38fde.json  query-add2783d33e7cd81b4746a2a347dc87cf7faec43c6c3d293a9d474b4b3ab9dbb.json  query-b31ac1b55bbfd5c8d8a5b9982572375272f0e31438acfbbd958fd1b30e6b7987.json  query-c956ed99a66cdf15cf03c1d97e043fa4f54b07e98f30415e60971977b073cd0e.json  query-d2f7a872576ee3254aebcc0cede88bd5eb767a717590926b404a1dd2f47f41c1.json  query-e5bb58d2f98a6a27de8df353e6d87eaea3af9b7429b41dc4947d2a7535727682.json  query-edf91ca7cee26e9b21b546a46e11363ebdacb3ac3bab277eb435fa715e20cfa7.json  query-f2297ea4ab7ab9bf80c71dc7f1994c4ec093063bd512ce1c86728028427c6fe0.json  query-f8d9eb86e22ef19fb4859cceb4f4a46cb3627558d0d895a97a7c6c07f492d76b.json
rabbitmq/: Cargo.toml
rabbitmq/src/: config.rs  connection.rs  lib.rs  messages.rs  publisher.rs  subscriber.rs
scheduler/: Cargo.toml
scheduler/src/: config.rs  main.rs  routes.rs  state.rs  types.rs
scheduler/src/api/: api_response.rs  create_job.rs  get_data.rs  healthcheck.rs  mod.rs
scheduler/src/handlers/: create_job.rs  data_consumer.rs  get_data.rs  mod.rs
scheduler/src/migrations/: 20240916101955_create_data_table.sql  20240924074334_create_worker_status_table.sql  20240926122714_create_jobs_table.sql  20241003130613_create_topics_and_worker_topics_table.sql  20241009102213_add_is_success_data_table.sql  20241009104607_update_jobs_table_add_status_and_not_nulls.sql  20241009110204_create_sub_jobs_table.sql  20241011122717_update_worker_data_sub_job.sql
scheduler/src/queue/: data_consumer.rs  mod.rs  status_consumer.rs
scheduler/src/repository/: data_repository.rs  job_repository.rs  mod.rs  sub_job_repository.rs  topic_repository.rs  worker_repository.rs
worker/: Cargo.toml
worker/src/: config.rs  main.rs
worker/src/handlers/: download.rs  head.rs  job_consumer.rs  mod.rs  ping.rs  result_sender.rs  results.rs
worker/src/queue/: job_consumer.rs  mod.rs  status_sender.rs
