[package]
name = "rabbitmq"
version = "0.1.0"
edition = "2021"
authors = ["Michał Mach <michal.mach@neti-soft.com>"]

[dependencies]
serde = { version = "1.0.209", features = ["derive"] }
amqprs = { version = "2.0.0", features = ["tls"] }
serde_json = "1.0.127"
uuid = "1.10.0"
url = "2.5.2"
chrono = { version = "0.4.38", features = ["serde"] }
async-trait = "0.1.83"
anyhow = "1.0.89"
tokio = "1.40.0"
color-eyre = "0.6.3"



