[package]
name = "scheduler"
version = "0.1.0"
edition = "2021"
authors = ["Michał Mach <michal.mach@neti-soft.com>"]

[dependencies]
amqprs = "1.7.0"
async-trait = "0.1.82"
axum = {version = "0.7.5", features = ["macros"]}
chrono = "0.4.38"
dotenv = "0.15.0"
rabbitmq = { version = "0.1.0", path = "../rabbitmq" }
serde = "1.0.209"
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
tower = "0.5.0"
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
url = "2.5.2"
uuid = { version = "1.10.0", features = ["v4", "serde"] }
