[package]
name = "scheduler"
version = "0.1.0"
edition = "2021"
authors = ["Michał Mach <michal.mach@neti-soft.com>"]

[dependencies]
amqprs = "1.7.0"
anyhow = "1.0.87"
async-trait = "0.1.82"
axum = {version = "0.7.5", features = ["macros"]}
color-eyre = "0.6.3"
dotenv = "0.15.0"
rabbitmq = { version = "0.1.0", path = "../rabbitmq" }
rand = "0.8.5"
reqwest = "0.12.7"
serde = "1.0.209"
serde_json = "1.0.128"
sqlx = { version = "0.8.2", features = [ "runtime-tokio", "postgres", "uuid", "json"]}
tokio = { version = "1.40.0", features = ["full"] }
tower = "0.5.0"
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
url = "2.5.2"
uuid = { version = "1.10.0", features = ["v4", "serde"] }

[dev-dependencies]
sqlx-cli = "0.8.2"
