[package]
name = "scheduler"
version = "0.1.0"
edition = "2021"
authors = ["Michał Mach <michal.mach@neti-soft.com>"]

[dependencies]
amqprs = { version = "2.0.0", features = ["tls"] }
anyhow = "1.0.87"
async-trait = "0.1.82"
axum = {version = "0.7.5", features = ["macros"]}
axum-extra = "0.9.3"
color-eyre = "0.6.3"
dotenvy = "0.15.7"
rabbitmq = { version = "0.1.0", path = "../rabbitmq" }
rand = "0.8.5"
reqwest = "0.12.7"
serde = "1.0.209"
serde_json = "1.0.128"
sqlx = { version = "0.8.2", features = [ "runtime-tokio", "postgres", "uuid", "json", "tls-rustls-ring" ]}
tokio = { version = "1.40.0", features = ["full"] }
tower = "0.5.0"
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
url = "2.5.2"
uuid = { version = "1.10.0", features = ["v4", "serde"] }
urlencoding = "2.1.3"

[dev-dependencies]
sqlx-cli = "0.8.2"
