[package]
name = "worker"
version = "0.1.0"
edition = "2021"
authors = ["Michał Mach <michal.mach@neti-soft.com>"]

[dependencies]
amqprs = { version = "2.0.0", features = ["tls"] }
anyhow = "1.0.87"
async-trait = "0.1.82"
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15.7"
rabbitmq = { version = "0.1.0", path = "../rabbitmq" }
rand = "0.8.5"
reqwest = "0.12.7"
serde = "1.0.209"
serde_json = "1.0.127"
surge-ping = "0.8.1"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
url = "2.5.2"
uuid = "1.10.0"
